# fingerscore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/routers/: export.py  fingering.py  score.py
backend/services/: export_service.py  fingering_service.py  score_service.py
backend/utils/: file_utils.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  fingering-editor.js  score-renderer.js
tests/: test_export_service.py  test_fingering_service.py  test_tech_verify.py
tests/fixtures/: sample_score.musicxml
