[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fingerscore"
version = "0.1.0"
description = "A web-based tool for annotating piano fingerings on sheet music"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "music21>=9.1.0",
    "verovio>=4.0.0",
    "lxml>=4.9.0",
    "cairosvg>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
